# ai-ecommerce-multi-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  __init__.py  main.py
backend/agents/: __init__.py  base.py  registry.py
backend/core/: config.py  database.py  deps.py
backend/models/: __init__.py  base.py  conversation.py  report.py  schemas.py
backend/routers/: chat.py  dashboard.py  report.py
backend/services/: __init__.py  analysis_insight.py  conversation.py  data_generator.py  fake_store.py  llm_service.py  report.py  report_document.py  report_export.py  report_polisher.py
docs/: README.md
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  Dashboard.css  ProductBrowser.css  ReportList.css  index.css  main.tsx  types.ts
scripts/: README.md
scripts/maintenance/: add_charts.py  fix_barwidth.py  fix_import.py  fix_polisher.py  get_report.py  list_reports.py  pdf_to_png.py  smoke_pdf.py
tests/: README.md  test_phase2_2.py  test_phase2_4.py  test_phase2_6.py  test_phase2_7.py  test_phase2_8.py  test_phase2_9.py  test_phase3.py  test_phase4.py  test_phase5_2.py  test_phase5_4.py  test_phase5_6.py
tests/integration/: test_phase1.py  test_phase2_10.py  test_phase2_3.py  test_phase2_5.py  test_phase4.py  test_phase5_3.py  test_phase5_5.py  test_task_routing.py
tests/manual/: audit_project.py  test_chat_trace.py  test_diag2.py  test_direct_chat.py  test_export_43.py  test_run_1.py  (+4 more)
(+40 files in other folders)
