[project]
name = "ai-ecommerce-multi-agent"
version = "0.1.0"
description = "AI-powered e-commerce multi-agent system for product analysis, pricing, marketing, and promotion"
requires-python = ">=3.13"
authors = [
    { name = "Aaryn-105", email = "" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.2.0",
    "python-docx>=1.1.0",
    "alembic>=1.14.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
